# rlibv2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  bench_client  bench_server  build.sh  db_client  fly_client  or_client  pclient  pserver  roclient  roserver  wclient  wserver
benchs/: bench.cmake  bench_client.cc
benchs/dc_bench/: client.cc  dc_server.cc
core/: common.hh  lib.hh  naming.hh  nic.hh  nicinfo.hh  rctrl.hh  result.hh
core/bootstrap/: multi_msg.hh  proto.hh
core/qps/: abs_recv_allocator.hh  config.hh  dc.hh  impl.hh  mod.hh  op.hh  rc.hh  rc_recv_manager.hh  recv_helper.hh  recv_iter.hh  ud.hh
core/rmem/: config.hh  handler.hh  mem.hh
core/utils/: abs_factory.hh  ipname.hh  logging.hh  marshal.hh  marshal.hpp  mod.hh  option.hh  timer.hh  util.hpp
examples/: exp.cmake
examples/ud_overflow/: client.cc  server.cc
examples/ud_pingpong/: client.cc  server.cc
rbuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bench_client  bench_server  cmake_install.cmake  db_client  fly_client  or_client  pclient  pserver  roclient  roserver  wclient  wserver
rbuild/examples/gflags/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gflags-nonamespace-targets.cmake  gflags-targets.cmake
rbuild/tests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
rbuild/tests/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: bootstrap.py  make.toml  run.toml  sync_to_server.sh
scripts/examples/rc_overflow/: make.toml  run.toml
tests/: test_channel.cc  test_cm.cc  test_mem.cc  test_op.cc  test_ud.cc
(+3 files in other folders)
